--- a/views/grade.ejs
+++ b/views/grade.ejs
@@ -17,6 +17,43 @@
     }
   </style>
   <body>
-    <p><%= registrationNumber %></p>
+    <div class="container-md">
+      <div class="card">
+        <div class="card-header">Student Information</div>
+        <div class="card-body">
+          <h6 class="card-subtitle mb-2 text-body-secondary">Registration Number</h6>
+          <p class="card-text"><%= registrationNumber %></p>
+          <h6 class="card-subtitle mb-2 text-body-secondary">Surname</h6>
+          <p class="card-text"><%= registrationNumber %></p>
+          <h6 class="card-subtitle mb-2 text-body-secondary">First Name</h6>
+          <p class="card-text"><%= registrationNumber %></p>
+          <h6 class="card-subtitle mb-2 text-body-secondary">Middle Name</h6>
+          <p class="card-text"><%= registrationNumber %></p>
+          <h6 class="card-subtitle mb-2 text-body-secondary">Department</h6>
+          <p class="card-text"><%= registrationNumber %></p>
+          <form action="/" method="post">
+            <div class="input-group mb-3">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Score"
+                aria-label="Score"
+                aria-describedby="button-addon2"
+                id="score"
+                name="score"
+              />
+              <button
+                class="btn btn-outline-primary"
+                type="submit"
+                id="button-addon2"
+              >
+                Submit
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <p></p>
   </body>
 </html>
