--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
             type="submit"
             id="button-addon2"
           >
-            Submit
+            Get Student Info
           </button>
         </div>
       </form>
