feat: Implement '/grade' route
Extracted student information based on the registration number supplied.

--- a/views/grade.ejs
+++ b/views/grade.ejs
@@ -21,16 +21,18 @@
       <div class="card">
         <div class="card-header">Student Information</div>
         <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-body-secondary">Registration Number</h6>
-          <p class="card-text"><%= registrationNumber %></p>
+          <h6 class="card-subtitle mb-2 text-body-secondary">
+            Registration Number
+          </h6>
+          <p class="card-text"><%= registration_number %></p>
           <h6 class="card-subtitle mb-2 text-body-secondary">Surname</h6>
-          <p class="card-text"><%= registrationNumber %></p>
+          <p class="card-text"><%= last_name%></p>
           <h6 class="card-subtitle mb-2 text-body-secondary">First Name</h6>
-          <p class="card-text"><%= registrationNumber %></p>
+          <p class="card-text"><%= first_name %></p>
           <h6 class="card-subtitle mb-2 text-body-secondary">Middle Name</h6>
-          <p class="card-text"><%= registrationNumber %></p>
+          <p class="card-text"><%= middle_name %></p>
           <h6 class="card-subtitle mb-2 text-body-secondary">Department</h6>
-          <p class="card-text"><%= registrationNumber %></p>
+          <p class="card-text"><%= department %></p>
           <form action="/" method="post">
             <div class="input-group mb-3">
               <input
