--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,8 +26,8 @@
             placeholder="Registration number"
             aria-label="Registration number"
             aria-describedby="button-addon2"
-            id="registrationNumber"
-            name="registrationNumber"
+            id="registration_number"
+            name="registration_number"
           />
           <button
             class="btn btn-outline-primary"
