--- a/views/register.ejs
+++ b/views/register.ejs
@@ -31,6 +31,7 @@
                   type="text"
                   class="form-control"
                   id="registration_number"
+                  name="registration_number"
                 />
               </div>
             </div>
@@ -39,7 +40,12 @@
                 >Surname:</label
               >
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="last_name" />
+                <input
+                  type="text"
+                  class="form-control"
+                  id="last_name"
+                  name="last_name"
+                />
               </div>
             </div>
             <div class="mb-3 row">
@@ -47,7 +53,12 @@
                 >First Name:</label
               >
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="first_name" />
+                <input
+                  type="text"
+                  class="form-control"
+                  id="first_name"
+                  name="first_name"
+                />
               </div>
             </div>
             <div class="mb-3 row">
@@ -55,16 +66,40 @@
                 >Middle Name:</label
               >
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="middle_name" />
+                <input
+                  type="text"
+                  class="form-control"
+                  id="middle_name"
+                  name="middle_name"
+                />
+              </div>
+            </div>
+            <div class="mb-3 row">
+              <label for="department" class="col-sm-3 col-form-label"
+                >Department:</label
+              >
+              <div class="col-sm-10">
+                <select class="form-select" id="department" name="department">
+                  <option selected></option>
+                  <% for (const department of departments) { %>
+                  <option value="<%= department %>"><%= department %></option>
+                  <% } %>
+                </select>
+                </select>
               </div>
             </div>
             <div class="mb-3 row">
               <label for="score" class="col-sm-3 col-form-label">Score:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="score" />
+                <input
+                  type="text"
+                  class="form-control"
+                  id="score"
+                  name="score"
+                />
               </div>
             </div>
-            <button type="button" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
       </div>
