--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,6 +9,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="shortcut icon" type="image/jpg" href="logo.jpg" />
     <title>gradr</title>
   </head>
   <style>
@@ -17,6 +18,23 @@
     }
   </style>
   <body>
+    <div class="container-md mb-5">
+      <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img
+              src="logo.png
+          "
+              alt="Logo"
+              width="24"
+              height="24"
+              class="d-inline-block align-text-top"
+            />
+            gradr
+          </a>
+        </div>
+      </nav>
+    </div>
     <div class="container-md">
       <div class="card">
         <div class="card-header">Register Student</div>
