feat: Add Register button to '/' route

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,13 +48,15 @@
             id="registration_number"
             name="registration_number"
           />
-          <button
-            class="btn btn-outline-primary"
-            type="submit"
+          <div
+            class="btn-group"
+            role="group"
+            aria-label="Basic outlined example"
             id="button-addon2"
           >
-            Get Student Info
-          </button>
+            <a href="/register" class="btn btn-outline-primary">Register</a>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
         </div>
       </form>
     </div>
