--- a/views/passcode.ejs
+++ b/views/passcode.ejs
@@ -15,6 +15,8 @@
   <style>
     body {
       padding-top: 50px;
+      padding-left: 30px;
+      padding-right: 30px;
     }
   </style>
   <body>
