--- a/views/grade.ejs
+++ b/views/grade.ejs
@@ -67,10 +67,7 @@
               <input
                 type="hidden"
                 name="registration_number"
-                value="<%"
-                ="registration_number"
-                %
-              />
+                value=<%= registration_number %>
               />
               <button
                 class="btn btn-outline-primary"
