feat: Add reset students' score link and download link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,14 @@
             />
             gradr
           </a>
-          <a class="btn btn-primary" href="/download" role="button">Download</a>
+          <div
+            class="btn-group"
+            role="group"
+            aria-label="Basic outlined example"
+          >
+            <a href="/passcode" class="btn btn-outline-primary">Reset</a>
+            <a href="/download" class="btn btn-primary">Download</a>
+          </div>
         </div>
       </nav>
     </div>
