feat: Add required to input fields

--- a/views/grade.ejs
+++ b/views/grade.ejs
@@ -56,13 +56,14 @@
           <form action="/score" method="post">
             <div class="input-group mb-3">
               <input
-                type="text"
+                type="number"
                 class="form-control"
                 placeholder="Score"
                 aria-label="Score"
                 aria-describedby="button-addon2"
                 id="score"
                 name="score"
+                required
               />
               <input
                 type="hidden"
