--- a/views/passcode.ejs
+++ b/views/passcode.ejs
@@ -48,6 +48,7 @@
             aria-describedby="button-addon2"
             id="passcode"
             name="passcode"
+            required
           />
           <button
             class="btn btn-outline-primary"
