--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,6 +56,7 @@
             aria-describedby="button-addon2"
             id="registration_number"
             name="registration_number"
+            required
           />
           <div
             class="btn-group"
