--- a/views/register.ejs
+++ b/views/register.ejs
@@ -52,6 +52,7 @@
                   class="form-control"
                   id="registration_number"
                   name="registration_number"
+                  required
                 />
               </div>
             </div>
@@ -65,6 +66,7 @@
                   class="form-control"
                   id="last_name"
                   name="last_name"
+                  required
                 />
               </div>
             </div>
@@ -78,6 +80,7 @@
                   class="form-control"
                   id="first_name"
                   name="first_name"
+                  required
                 />
               </div>
             </div>
@@ -91,6 +94,7 @@
                   class="form-control"
                   id="middle_name"
                   name="middle_name"
+                  required
                 />
               </div>
             </div>
@@ -99,12 +103,11 @@
                 >Department:</label
               >
               <div class="col-sm-10">
-                <select class="form-select" id="department" name="department">
+                <select class="form-select" id="department" name="department" required>
                   <option selected></option>
                   <% for (const department of departments) { %>
                   <option value="<%= department %>"><%= department %></option>
                   <% } %>
-                </select>
                 </select>
               </div>
             </div>
@@ -116,6 +119,7 @@
                   class="form-control"
                   id="score"
                   name="score"
+                  required
                 />
               </div>
             </div>
