--- a/views/grade.ejs
+++ b/views/grade.ejs
@@ -23,7 +23,7 @@
     <div class="container-md mb-5">
       <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="/">
             <img
               src="logo.png
           "
