feat: Modified button size

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
             gradr
           </a>
           <div
-            class="btn-group"
+            class="btn-group btn-group-sm"
             role="group"
             aria-label="Basic outlined example"
           >
@@ -59,7 +59,7 @@
             required
           />
           <div
-            class="btn-group"
+            class="btn-group btn-group-sm"
             role="group"
             aria-label="Basic outlined example"
             id="button-addon2"
