--- a/views/register.ejs
+++ b/views/register.ejs
@@ -104,7 +104,7 @@
               >
               <div class="col-sm-10">
                 <select class="form-select" id="department" name="department" required>
-                  <option selected></option>
+                  <option value="" selected>Select department...</option>
                   <% for (const department of departments) { %>
                   <option value="<%= department %>"><%= department %></option>
                   <% } %>
