feat: Complete additional requirements
- Added current week to '/passcode' route
- Extended download limit to download entire table

--- a/views/grade.ejs
+++ b/views/grade.ejs
@@ -45,13 +45,13 @@
             Registration Number
           </h6>
           <p class="card-text"><%= registration_number %></p>
-          <h6 class="card-subtitle mb-2 text-body-secondary">Surname</h6>
+          <h6 class="card-subtitle mb-2 text-body-secondary">Surname:</h6>
           <p class="card-text"><%= last_name%></p>
-          <h6 class="card-subtitle mb-2 text-body-secondary">First Name</h6>
+          <h6 class="card-subtitle mb-2 text-body-secondary">First Name:</h6>
           <p class="card-text"><%= first_name %></p>
-          <h6 class="card-subtitle mb-2 text-body-secondary">Middle Name</h6>
+          <h6 class="card-subtitle mb-2 text-body-secondary">Middle Name:</h6>
           <p class="card-text"><%= middle_name %></p>
-          <h6 class="card-subtitle mb-2 text-body-secondary">Department</h6>
+          <h6 class="card-subtitle mb-2 text-body-secondary">Department:</h6>
           <p class="card-text"><%= department %></p>
           <form action="/score" method="post">
             <div class="input-group mb-3">
