--- a/views/passcode.ejs
+++ b/views/passcode.ejs
@@ -42,6 +42,7 @@
         <div class="card-header">Set Week</div>
         <div class="card-body">
           <form action="/reset" method="post">
+            <p class="card-text">Current week: <%= week_number %></p>
             <div class="mb-3 row">
               <label for="week" class="col-sm-3 col-form-label"
                 >Week:</label
@@ -56,7 +57,7 @@
               </div>
             </div> 
             <div class="mb-3 row">
-              <label for="registration_number" class="col-sm-3 col-form-label"
+              <label for="passcode" class="col-sm-3 col-form-label"
                 >Passcode:</label
               >
               <div class="col-sm-10">
