--- a/views/grade.ejs
+++ b/views/grade.ejs
@@ -71,7 +71,7 @@
                 value=<%= registration_number %>
               />
               <button
-                class="btn btn-outline-primary"
+                class="btn btn-primary"
                 type="submit"
                 id="button-addon2"
               >
