feat: Add clear button to reset forms

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -128,7 +128,17 @@
                 />
               </div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div
+              class="btn-group btn-group-sm"
+              role="group"
+              aria-label="Basic outlined example"
+              id="register-submit"
+            >
+              <button class="btn btn-outline-primary" type="reset">
+                Clear
+              </button>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
           </form>
         </div>
       </div>
