--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
       padding-left: 30px;
       padding-right: 30px;
     }
-    #registration_number {
+    .input-group {
       margin-top: 50px;
     }
   </style>
@@ -78,6 +78,13 @@
             name="registration_number"
             required
           />
+          <button
+            onclick="document.getElementById('registration_number').value = ''"
+            class="btn btn-outline-primary"
+            id="button-addon2"
+          >
+            Clear
+          </button>
         </div>
         <div
           class="btn-group btn-group-sm"
@@ -116,7 +123,7 @@
     }
 
     const regNoInput = document.getElementById("registration_number");
-    regNoInput.addEventListener("keypress", (event) => {
+    regNoInput.addEventListener("keyup", (event) => {
       const regNoText = regNoInput.value;
       console.log(regNoText.length);
       if (regNoText.length === 3 && event.key !== "Backspace") {
@@ -127,8 +134,9 @@
       }
 
       if (regNoText.length === 8 && event.key !== "Backspace") {
-        const isNumber = /^[0-9]+$/.test(regNoText.slice(4, 9));
-        if (isNumber) {
+        const isAllNumbers = /^[0-9]+$/.test(regNoText);
+        const isYear = /^[0-9]+$/.test(regNoText.slice(4, 9));
+        if (isYear && !isAllNumbers) {
           regNoInput.value = regNoText + "/";
         }
       }
