refactor: Change onclick to reset

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,7 +79,7 @@
             required
           />
           <button
-            onclick="document.getElementById('registration_number').value = ''"
+            type="reset"
             class="btn btn-outline-primary"
             id="button-addon2"
           >
