refactor: Change routes
- Made '/' route to redirect to '/index'
- Renamed '/new_student' to '/student'

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -23,7 +23,7 @@
     <div class="container-md mb-5">
       <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand" href="/index">
             <img
               src="logo.png
           "
@@ -41,7 +41,7 @@
       <div class="card">
         <div class="card-header">Register Student</div>
         <div class="card-body">
-          <form action="/new_student" method="post">
+          <form action="/student" method="post">
             <div class="mb-3 row">
               <label for="registration_number" class="col-sm-3 col-form-label"
                 >Reg No:</label
