--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
     <div class="container-md mb-5">
       <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand" href="/index">
             <img
               src="logo.png
           "
