feat: Add route guard
- Requires user to enter passcode to access routes.
- Added logout functionality
- Change week to display as link.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
             role="group"
             aria-label="Basic outlined example"
           >
-            <a href="/week" class="btn btn-outline-primary">Reset</a>
+            <a href="/logout" class="btn btn-outline-primary">Logout</a>
             <a href="/download" class="btn btn-primary">Download</a>
           </div>
         </div>
@@ -60,7 +60,7 @@
       class="centralized-heading d-flex justify-content-center align-items-center"
     >
       <h6>
-        Current week:
+        <a href="/week">Week</a>:
         <span class="badge text-bg-secondary"><%= week_number %></span>
       </h6>
     </div>
