--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" type="image/jpg" href="logo.jpg" />
-    <title>gradr</title>
+    <title>iGrade</title>
   </head>
   <style>
     body {
@@ -28,11 +28,10 @@
               src="logo.png
           "
               alt="Logo"
-              width="20"
+              width="60"
               height="20"
               class="d-inline-block align-text-top"
             />
-            gradr
           </a>
         </div>
       </nav>
@@ -44,7 +43,7 @@
           <form action="/verify" method="post">            
             <div class="mb-3 row">
               <label for="passcode" class="col-sm-3 col-form-label"
-                >Passcode:</label
+                >Password:</label
               >
               <div class="col-sm-10">
                 <input
