--- a/views/grade.ejs
+++ b/views/grade.ejs
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" type="image/jpg" href="logo.jpg" />
-    <title>gradr</title>
+    <title>iGrade</title>
   </head>
   <style>
     body {
@@ -28,11 +28,10 @@
               src="logo.png
           "
               alt="Logo"
-              width="20"
+              width="60"
               height="20"
               class="d-inline-block align-text-top"
             />
-            gradr
           </a>
         </div>
       </nav>
@@ -68,13 +67,12 @@
               <input
                 type="hidden"
                 name="registration_number"
-                value=<%= registration_number %>
+                value="<%"
+                ="registration_number"
+                %
               />
-              <button
-                class="btn btn-primary"
-                type="submit"
-                id="button-addon2"
-              >
+              />
+              <button class="btn btn-primary" type="submit" id="button-addon2">
                 Submit
               </button>
             </div>
