--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" type="image/jpg" href="logo.jpg" />
-    <title>gradr</title>
+    <title>iGrade</title>
   </head>
   <style>
     body {
@@ -39,11 +39,10 @@
               src="logo.png
           "
               alt="Logo"
-              width="20"
+              width="60"
               height="20"
               class="d-inline-block align-text-top"
             />
-            gradr
           </a>
           <div
             class="btn-group btn-group-sm"
